# attachments

./: README.md
Coin3D_coin/issue118/: Sphere.iv
Coin3D_coin/issue121/: SoDragger.cpp
Coin3D_coin/issue141/: sogui_hg.diff
Coin3D_coin/issue142/: hg.diff
Coin3D_coin/issue145/: CMakeLists.txt  CMakeLists.txt.diff  testfile.cpp.cmake.in
Coin3D_coin/issue150/: SoBaseKit.cpp
Coin3D_coin/issue155/: Soqt error.txt
Coin3D_coin/issue165/: config.rtf
Coin3D_coin/issue177/: (Issue 177) Render is missing triangles (round 2).iv  2019-Sept-23_missing_triangles.iv  Issue_177_Render_is_missing_Triangles_2019-Nov-4.iv
Coin3D_coin/issue182/: test.tgz
Coin3D_coin/issue20/: for.patch
Coin3D_coin/issue73/: patch-coin.diff
Coin3D_coin/issue75/: 07.3.TextureFunction_working.cpp
Coin3D_coin/issue80/: ReversePerspectiveCube.iv
Coin3D_coin/issue86/: FontBug.iv
Coin3D_coin/issue87/: Extrusion Bug.wrl
Coin3D_coin/issue88/: maketranscript
Coin3D_coin/issue92/: Hercule_AC130.3ds
Coin3D_quarter/issue10/: example.cpp
Coin3D_soqt/issue1/: SoQtGLWidget.cpp  SoQtGLWidgetP.h
Coin3D_soqt/issue7/: SoQt-NON-working-version-output.txt  SoQt-working-version-output.txt  SoQtGLWidget-Test.cpp  soqt_build.txt  soqt_config.txt  soqt_run.txt  soqt_run2.txt
Coin3D_soqt/issue9/: SoQt.pc.cmake.in
